# audi_hmi

./: README.md
web_backend/: CMakeLists.txt  package.xml
web_backend/include/utils/: msg_callback.h  parameters.h  point.h  threadsafe_queue.h  web_utils.h
web_backend/launch/: hmi_sim.launch
web_backend/script/: audi_lamp.py  client.py  hmi_run.sh  lamp.sh
web_backend/src/: main.cpp  msg_callback.cpp  parameters.cpp  web_utils.cpp
web_backend/web_backend/include/utils/: web_utils.h
web_backend/web_backend/launch/: hmi_sim.launch
web_backend/web_backend/script/: audi_lamp.py  hmi_run.sh
web_backend/web_backend/src/: main.cpp  msg_callback.cpp  point.cpp
